--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
-    <string name="app_name">log</string>
+    <string name="app_name">My Application5</string>
+    <string name="action_settings">Settings</string>
+    <string name="stylish_text">
+        Dont have an account?<b>Sign up.</b>
+    </string>
+    <string name="stylish_text2">
+        Already Signed In ? <b>Login</b>
+    </string>
+    <string name="stylish_text3">
+        Forgotten your login details ?<b>Get help signing in.</b>
+    </string>
 </resources>
